// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <hr
    className="MuiDivider-root-1"
  />
  <li
    className="MuiListItem-container-7"
  >
    <div
      className="MuiListItem-root-6 MuiListItem-default-9 MuiListItem-gutters-14 MuiListItem-secondaryAction-16"
      disabled={false}
    >
      <div
        className="MuiListItemText-root-18"
      >
        <span
          className="MuiTypography-root-24 MuiTypography-subheading-31 MuiListItemText-primary-21"
        >
          massage
        </span>
        <p
          className="MuiTypography-root-24 MuiTypography-body1-33 MuiTypography-colorTextSecondary-57 MuiListItemText-secondary-22"
        >
          displayName
        </p>
      </div>
    </div>
    <div
      className="MuiListItemSecondaryAction-root-60"
    >
      <button
        aria-label="Delete"
        className="MuiButtonBase-root-67 MuiIconButton-root-61"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-66"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-70"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-79"
        />
      </button>
    </div>
  </li>
</div>
`;

exports[`renders correctly without authorName 1`] = `
<div>
  <hr
    className="MuiDivider-root-1"
  />
  <li
    className="MuiListItem-container-7"
  >
    <div
      className="MuiListItem-root-6 MuiListItem-default-9 MuiListItem-gutters-14 MuiListItem-secondaryAction-16"
      disabled={false}
    >
      <div
        className="MuiListItemText-root-18"
      >
        <span
          className="MuiTypography-root-24 MuiTypography-subheading-31 MuiListItemText-primary-21"
        >
          massage
        </span>
        <p
          className="MuiTypography-root-24 MuiTypography-body1-33 MuiTypography-colorTextSecondary-57 MuiListItemText-secondary-22"
        >
          Anonymous
        </p>
      </div>
    </div>
    <div
      className="MuiListItemSecondaryAction-root-60"
    >
      <button
        aria-label="Delete"
        className="MuiButtonBase-root-67 MuiIconButton-root-61"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-66"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-70"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-79"
        />
      </button>
    </div>
  </li>
</div>
`;
